--- a/test-ts5-project/index.html
+++ b/test-ts5-project/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div id="app">
-      <h1>Testing @base-web-kits packages</h1>
       <div id="result"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
