feat: 添加React和Vue工具库依赖并更新包配置0.9.8

--- a/test-html5-project/index.html
+++ b/test-html5-project/index.html
@@ -64,9 +64,9 @@
       </div>
     </div>
 
-    <!-- 使用CDN引入UMD格式的工具库 -->
-    <script src="https://cdn.jsdelivr.net/npm/@base-web-kits/base-tools-ts/dist/base-tools-ts.umd.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@base-web-kits/base-tools-web/dist/base-tools-web.umd.global.js"></script>
+    <!-- 使用本地构建的UMD格式的工具库 -->
+    <script src="../packages/base-tools-ts/dist/base-tools-ts.umd.global.js"></script>
+    <script src="../packages/base-tools-web/dist/base-tools-web.umd.global.js"></script>
 
     <script>
       // 获取DOM元素
